fixup! Build: expose jdk.internal.ref package to some modules thus fixing lost references in runtime